--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -11,7 +11,7 @@
   --color-primary: #f15757;
   --color-secondary: #ffb400;
   --color-foreground: #404040;
-  --color-muted: #d4d4d4;
+  --color-muted: #f5f5f5;
 
   --radius-5xl: 2.625rem;
 }
